updated git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@
 
 # Log file
 *.log
+logs/*
+
+#intelliJ
+*.ipr
+
 
 # BlueJ files
 *.ctxt
@@ -19,5 +24,19 @@
 *.tar.gz
 *.rar
 
+build/*
+out/*
+run/*
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+*.iml
+*.iws
+fileTemplates/armorCrafting.json
+fileTemplates/blockJson.json
+fileTemplates/blockModelJson.json
+fileTemplates/itemJson.json
+fileTemplates/swordRecipe.json
+fileTemplates/toolJson.json
+*.txt
+*.gz
