--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@ logs/*
 
 #intelliJ
 *.ipr
-
+elementalitems/util/annotations.xml
+fileTemplates/*
 
 # BlueJ files
 *.ctxt
@@ -27,11 +28,12 @@ logs/*
 build/*
 out/*
 run/*
+*.gradle/*
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 *.iml
 *.iws
-fileTemplates/*
 *.txt
 *.gz
+
