--- a/build.gradle
+++ b/build.gradle
@@ -55,7 +55,8 @@ dependencies {
 
 	compile 'org.jetbrains:annotations:15.0'
 	compile 'org.jetbrains:annotations:15.0'
-	testCompile 'org.junit.jupiter:junit-jupiter-api:5.3.1'
+	testCompile 'org.junit.jupiter:junit-jupiter-api:5.3.2'
+	testCompile 'org.junit.jupiter:junit-jupiter-params:5.3.2'
 	testCompile 'org.mockito:mockito-core:1.+'
 }
 
