--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 //Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 version = "1.0"
 group = "elementalitems" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "elementalitems"
+archivesBaseName = "elementalitems-1.12.2-14.23.2.2625"
 
 sourceCompatibility = targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 compileJava {
