--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ logs/*
 build/*
 out/*
 run/*
+./gradle/*
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
