--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,8 @@ logs/*
 build/*
 out/*
 run/*
-./gradle/*
+*.bin
+*.lock
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
