--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,25 @@
-# Compiled class file
-*.class
+# eclipse
+bin
+*.launch
+.settings
+.metadata
+.classpath
+.project
 
-# Log file
-*.log
-logs/*
-
-#intelliJ
+# idea
+out
 *.ipr
-
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-build/*
-out/*
-run/*
-*.bin
-*.lock
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-*.iml
 *.iws
-fileTemplates/*
-*.txt
-*.gz
-elementalitems/util/annotations.xml
+*.iml
+.idea
+
+# gradle
+build
+.gradle
+
+# other
+eclipse
+run
+
+# Files from Forge MDK
+forge*changelog.txt
