--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -7,11 +7,11 @@ loaderVersion="[28,)" #mandatory (28 is current forge version)
 # The modid of the mod
 modId="elementalitems" #mandatory
 # The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
-version="1.0.1-mc1.14.4" #mandatory
+version="1.0-mc1.15.2" #mandatory
  # A display name for the mod
 displayName="Elemental Items" #mandatory
 # A URL to query for updates for this mod. See the JSON update specification <here>
-updateJSONURL="https://raw.githubusercontent.com/ploiu/elementalItems/update_1.14/update.json" #optional
+updateJSONURL="https://raw.githubusercontent.com/ploiu/elementalItems/master/update.json" #optional
 # A URL for the "homepage" for this mod, displayed in the mod UI
 displayURL="https://github.com/ploiu/elementalItems"
 # A file name (in the root of the mod JAR) containing a logo for display
